# pretty-gap-analysis

./: .gitignore  README.md  main.py  pyproject.toml  templater.py
data/: qualifications.json
models/: beacon_config.py  member.py  qualification.py
templates/: styles.css  table.html.jinja
transporters/: beacon.py
utils/: codes.py  ignore.py  process_data.py
